meshcentral/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcentral
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: meshcentral
        image: typhonragewind/meshcentral
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /opt/meshcentral/meshcentral-data
        - name: files
          mountPath: /opt/meshcentral/meshcentral-files
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: meshcentral-data
      - name: files
        persistentVolumeClaim:
          claimName: meshcentral-files
